# miljoonalaatikko

./: .gitignore  README.md
AOC2018/: .gitignore  Dec01.c  Dec01.hs  Dec01.sh  Dec02.sh  Dec03.sh  load_input
AOC2021/: boiler.c  dec01-1.c  dec01-2.c  dec02-1.c  dec02-2.c  dec03-1.c  dec03-2.c  dec04.c  dec05.c  dec06.c  dec07.c  dec08.c  dec09.c  dec10.c  dec11.c  dec12.c  dec13.c  dec14.c  dec15.c  dec16.c  dec17.c  dec18.c  dec19.c  dec20.c  dec21.c  dec22.c  dec23.c  dec24.c  dec25.c
CSC-Guides/: TaitoUserGuide.mk  makefile  playbook.yml
CSC-Guides-archive/: CSCComputingEnvironmentUserGuide.mk  README.md  graybox.tex  manuals.js
GF-list/: README.org  generic_list.f90  list.f90  list_procs.f90  list_specs.f90  m1.f90  m2.f90  mod_integer_list.f90  mod_string.f90  mod_string_list.f90  p.f90  test.f90
annotate/: README.md  annotate  ex7_heat.c  ex7_main.c  log  makefile
bash-init/: testenv.sh
bashfuncs/: boxtext.sh  config-build.xml  dates.sh  paths.sh  process-stack.sh  test.xml  wfind.sh  xml.bash
csc-guides/: README.md
depf90/: depf90.awk
mpif90-conf/: README.md  makefile  myapp.conf  myapp.f08  mympi.f08  myutils.f08
neighbours/: fixed_radius.f90  lattice.f90  linear.f90  nearest_neighbours.f90  neighbours.f90  nnsearches.f90  packed.f90
org-reveal/: README.org
pexe/: .clang-format  CMakeLists.txt  example.sh  helloMPI.c  job.sh  pexe.c  pexe_long.c  pexes.c  pi.c  pi800.c  pirkka.f90  rpath.sh
projecteuler/: p-template.hs  p1.hs  p10.hs  p11.hs  p12.hs  p13.hs  p14.hs  p15.hs  p16.hs  p17.hs  p18.hs  p19.hs  p2.hs  p20.hs  p21.hs  p22.hs  (+18 more)
(+476 files in other folders)
